styles/components/article-header.css
.section-header {
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 24px;

    > div {
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: left;
    }

    .header-text-aside {
        gap: 24px;
    }
    
    p {
        font-size: clamp(1.125rem, calc((100vw - 50rem) * (2 - 1.125) / 40) + 1.125rem, 2rem);
    }

    h2 {
        line-height: 120%;
    }
    .header-text {
        height: 100%;
        display: flex;
        flex-direction: column;
        gap: 8px;
    }
}

.section-author {
    width: 100%;
    background-color: var(--color-background);
    border-radius: var(--border-radius-mobile);

    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 16px;
    padding: 16px 8px;

    p,
    h4 {
        text-align: center;
    }

    .title {
        font-weight: 400;
        line-height: 120%;
    }

    .name {
        gap: 0;
        line-height: 110%;
    }
}

.header-facts {
    width: 100%;
    display: flex;
    gap: clamp(16px, calc((100vw - 400px) * 16 / 1000 + 16), 32px);
    flex-wrap: wrap;

    div {
        display: flex;
        flex-direction: row;
        gap: 6px;
    }
    .date img {
        width: 16px;
    }
    .reading-time img {
        width: 20px;
    }
    .read img {
        width: 20px;
    }
}

/* #region media queries */
@media screen and (min-width: 769px) {
    .section-header {
        display: flex;
        flex-direction: row;
        justify-content: space-between;

        .header-text {
            max-width: 900px;
        }

        p {
            width: 95%;
        }

        aside p {
            font-size: 1rem;
        }

        .section-author {
            padding: 16px 16px;
            max-width: 275px;

            p {
                font-size: 1rem;
                text-align: left;
            }
        }
    }
}
/* #endregion media queries */

